# Resource-Aware-Coordination-AirSim

./: README.md
AirSim/: ..gitignore.swp  .gitignore  README.md
AirSim/AirLib/include/api/: RpcLibClientBase.hpp
AirSim/AirLib/include/common/: AirSimSettings.hpp
AirSim/AirLib/include/vehicles/car/api/: CarRpcLibClient.hpp
AirSim/AirLib/include/vehicles/multirotor/api/: MultirotorRpcLibClient.hpp
AirSim/AirLib/include/vehicles/multirotor/firmwares/simple_flight/firmware/: Params.hpp
AirSim/MultiDroneRAG/: main.cpp
AirSim/PythonClient/airsim/: client.py
AirSim/PythonClient/multirotor/: hover_images.py
AirSim/cmake/: CMakeLists.txt
AirSim/cmake/MultiDroneRAG/: CMakeLists.txt
AirSim/docker/: Dockerfile_binary_cuda12  build_docker_image_cuda12.py
AirSim/ros/: run_IC_exp.sh  run_IC_exp_15drones.sh  run_IC_exp_15drones_nn_server.sh  run_IC_exp_45drones.sh  run_IC_exp_45drones_nn_server.sh
AirSim/ros/settings_json/: auto_settings_generator_imcov.py  auto_settings_generator_pursuitevader.py  settings1.json  settings_10ic.json  settings_5p10e.json  settings_imagecovering.json
AirSim/ros/settings_json/archive/: settings2.json  settings2p2e.json  settings3.json  settings5.json  settingsNYC.json  settings_1droneworks.json  settings_2p2e.json  settings__.json  settings_autogen.json  settings_default.json  settings_gimbal.json  settings_multicam.json  settings_singledronedemo.json  settings_twodronedemo.json  settings_urbancity_6quads.json
AirSim/ros/src/airsim_ros_pkgs/: CMakeLists.txt
AirSim/ros/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h  airsim_ros_wrapper_IMU_RGBDSS.h  airsim_ros_wrapper_SS.h  airsim_ros_wrapper_SS_depth.h  airsim_ros_wrapper_imagecovering.h  airsim_ros_wrapper_odom.h
AirSim/ros/src/airsim_ros_pkgs/launch/: airsim_node.launch  airsim_node_10quadrotors_imcov_SS.launch  airsim_node_1quadrotor_imagecovering.launch  airsim_node_2quadrotors.launch  airsim_node_6quadrotors.launch  airsim_node_6quadrotors_SS_depth.launch  airsim_node_6quadrotors_imagecovering.launch  airsim_node_6quadrotors_imagecovering_SS.launch  airsim_node_6quadrotors_odom.launch  airsim_node_SS_depth_2p2e.launch  airsim_node_SS_depth_5p10e.launch  airsim_node_SS_depth_DEBUG.launch  airsim_node_odom_10p15e.launch  airsim_node_odom_10p15e_1node.launch  airsim_node_odom_5p10e.launch  airsim_node_odom_8p12e.launch  area_coverage_debug.launch  area_coverage_vis.launch  connectivity_mesh_neighbors.launch  debug_combine_pcl.launch  rviz.launch
AirSim/ros/src/airsim_ros_pkgs/msg/: Neighbors.msg  NeighborsArray.msg
AirSim/ros/src/airsim_ros_pkgs/rviz/: 3quadsviz.rviz  imagecovering_SS.rviz  urbancity_6quadrotors.rviz  urbancity_6quadrotorsv2.rviz  urbancity_6quadrotorsv3.rviz
AirSim/ros/src/airsim_ros_pkgs/scripts/: area_cover_test1.py  area_cover_test2.py  area_coverage_pointcloud.py  area_coverage_pointcloud_asyncsub.py  auto_generate_launchfile.py  camera_test.py  get_connectivity_mesh.py  multidrone_manual_control.py  multidrone_takeoff_land.py  save_pointcloud_npy.py  send_two_clouds.py  teleoperate_drones.py  teleoperate_drones_DEBUG.py
AirSim/ros/src/airsim_ros_pkgs/src/: airsim_node.cpp  airsim_node_IMU_RGBDSS.cpp  airsim_node_SS.cpp  airsim_node_SS_depth.cpp  airsim_node_imagecovering.cpp  airsim_node_odom.cpp  airsim_ros_wrapper.cpp  airsim_ros_wrapper_IMU_RGBDSS.cpp  airsim_ros_wrapper_SS.cpp  airsim_ros_wrapper_SS_depth.cpp  airsim_ros_wrapper_imagecovering.cpp  airsim_ros_wrapper_odom.cpp  area_occupancy_hashing.cpp  combine_pcl.cpp
AirSim/ros/src/airsim_tutorial_pkgs/launch/front_stereo_and_center_mono/: default.rviz
AirSim/ros/src/image_covering_coordination/: CMakeLists.txt  package.xml
AirSim/ros/src/image_covering_coordination/include/image_covering_coordination/: image_covering_coord_RAG.h  image_covering_coord_SG.h  total_score_collectiveFOV_logger.h
AirSim/ros/src/image_covering_coordination/launch/: connectivity_mesh_neighbors.launch  connectivity_mesh_neighbors_DFS.launch  image_covering_15drones_RAG.launch  image_covering_15drones_SG.launch  image_covering_45drones_RAG.launch  image_covering_45drones_SG.launch  odom_to_path_nodes_15robots.launch  total_score_collective_FOV_DEBUG.launch
AirSim/ros/src/image_covering_coordination/msg/: ImageCovering.msg
AirSim/ros/src/image_covering_coordination/scripts/: autogen_coordnode_launchfile.py  clock_publisher.py  get_connectivity_mesh.py  get_connectivity_mesh_DFS.py  odom_to_path_node.py  teleoperate_drones.py  v_autogen_coordnode_launchfile.launch.py
AirSim/ros/src/image_covering_coordination/src/: airsim_settings_parser.cpp  image_covering_coord_RAG.cpp  image_covering_coord_SG.cpp  image_covering_coordination.cpp  total_score_collectiveFOV_logger.cpp
